--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -580,6 +580,16 @@ body
 
                         .btn-small, .toggle-action
                         { @extend #HIDE; }
+
+                        .select-queue
+                        {
+                            @extend #LEFT;
+                            min-width: 120px;   height: 24px;
+                            font-size: 11px;
+                            background: $silver;
+                            color: $dark-purple;
+                            margin-left: 10px;
+                        }
                     }
 
                     .list-info
@@ -956,11 +966,16 @@ body
                     @extend #LEFT, #RELATIVE;
                     
                     .btn-full 
-                    { @extend #HIDE; }
+                    {
+                        @extend #HIDE, #LEFT;
+                        margin-left: 10px;
+
+                        &:first-child { @extend #NO-MARGIN; }
+                    }
 
                     .btn-small
                     {
-                        @extend #NO-BORDER, #SHOW;
+                        @extend #NO-BORDER, #LEFT, #SHOW;
                         background: transparent;
                         margin-left: -5px;
                         color: $purple;
@@ -977,6 +992,7 @@ body
                         -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25);
                         box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25);
                         left: 0;
+                        top: 25px;
 
                         li
                         {
