--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -895,12 +895,85 @@ body
                     background: $light;
                     z-index: 2;
 
+                    button.btn-which
+                    {
+                        @extend #ABSOLUTE, #CENTER, #NO-BORDER, #NO-PADDING;
+                        width: 40px;    height: 50px;
+                        margin: 0;
+                        line-height: 50px;
+                        color: $dark-purple;
+
+                        background: $navy-silver;
+                        border-radius: 0;
+                        border-top: solid 1px #d8d8d8;
+                    }
+
+                    ul.toggle-action
+                    {
+                        @extend #ABSOLUTE, #SHOW; 
+                        text-align: left;
+                        padding: 5px 0;
+                        background: $light;
+                        width: 170px;
+                        z-index: 2;
+                        -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25);
+                        -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25);
+                        box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25);
+                        margin-right: 5px;
+                        left: 0;
+                        bottom: 0;
+                        margin-bottom: 50px;
+
+                        li
+                        {
+                            @extend #LEFT;
+                            width: $full-width;
+
+                            a
+                            {
+                                @extend #LEFT, #NO-UNDERLINE;
+                                width: $full-width;
+                                font-size: 12px;    font-weight: 400;
+                                color: $purple;
+                                padding: 5px 15px;
+
+                                &:hover
+                                {
+                                    color: $pink;
+                                    background: $silver;
+                                }
+                            }
+                        }
+
+                        li.detailMsg
+                        {
+                            @extend #LEFT, #NO-UNDERLINE;
+                            width: $full-width;
+                            font-size: 12px;    font-weight: 400;
+                            color: $purple;
+                            padding: 5px 15px;
+
+                            &:hover
+                            {
+                                color: $pink;
+                                background: $silver;
+                            }
+                        }
+
+                        li.active a
+                        {
+                            color: $pink;
+                            background: $silver;
+                        }
+                    }
+
                     .textbox
                     {
                         @extend #LEFT;
                         width: $full-width; height: $full-height;
                         background: $silver;
                         padding-right: 240px;
+                        padding-left: 40px;
 
                         textarea.send-new-msg
                         {
@@ -910,6 +983,7 @@ body
                             font-size: 12px;
                             color: $concrete;
                             background: transparent;
+                            border-left: solid 1px $dark-silver;
                         }
 
                         button
