--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -837,6 +837,28 @@ body
 
                             .time-msg
                             { margin-right: 20px; }
+
+                            .info-operador
+                            {
+                                @extend #LEFT;
+                                margin-top: 10px;
+                                width: $full-width;
+                                
+                                p
+                                {
+                                    @extend #BOLD;
+                                    font-size: 11px;
+                                    color: $dark-purple;
+                                    padding: 0 5px;
+                                    border-left: solid 1px #000;
+
+                                    &:first-child
+                                    {
+                                        @extend #NO-BORDER;
+                                        padding-left: 0;
+                                    }
+                                }
+                            }
                         }
 
                         .time-msg::before
